--- a/app/src/main/res/layout/activity_causes.xml
+++ b/app/src/main/res/layout/activity_causes.xml
@@ -13,12 +13,20 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Causes Page"
+        android:text="Cancers:Leukamia"
+
         android:textSize="20sp"
         android:gravity="center"
         android:textStyle="bold"
         android:textColor="#E3860F"
-        android:background="#4694C500"
+        android:background="@drawable/shape"
+
         android:padding="10dp"/>
+
+    <WebView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="5dp"
+        android:id="@+id/causeswebview"/>
 
 </LinearLayout>
